ACQ-17 fix for zooming on mobile

--- a/app/components/Input/styles.less
+++ b/app/components/Input/styles.less
@@ -109,3 +109,9 @@ div.toggle.has-error > div:first-child {
 .has-error .geosuggest__input {
   border: solid 2px red !important;
 }
+@media (max-width: 767px){
+  .form-lightbox .field-row > select, .modal-body select.form-control {
+    font-size: 16px !important;
+    padding-left: 16px;
+  }
+}
